--- a/index.html
+++ b/index.html
@@ -93,31 +93,32 @@
   <h2 class="mt-5">A few of my projects</h2>
   <div class="row mb-5">
     <div class="col-md-4">
-      <a href="https://mehthara.github.io/looplab/">
-        <div class="card">
+      <a href="https://mehthara.github.io/looplab/" target="_blank">
+        <div class="card change">
             <img src="./images/looplab.png" class="card-img-top" alt="looplab project">
             <div class="card-body">
-                <p class="card-text">Website created using CSS design concepts</p>
+                <p class="card-text">Looplab is a social networking platform used to create, explore and share content. Bootstrap framework is used to build this website. </p>
             </div>
        </div>
       </a>
     </div>
     <div class="col-md-4">
-      <a href="https://mehthara.github.io/Hotel-Website/">
-        <div class="card">
+      <a href="https://mehthara.github.io/Hotel-Website/" target="_blank">
+        <div class="card change">
           <img src="./images/hotel.png" class="card-img-top" alt="looplab project">
-          <div class="card-body">
-              <p class="card-text">Website created using Bootstrap concepts</p>
+          <div class="card-body ">
+              <p class="card-text">Hotel BT website created using pure CSS to showcase the amenities provided by the hotel. It also displays an About page and Contact us page  </p>
           </div>
         </div>
       </a>
     </div>
     <div class="col-md-4">
-      <a href="https://hi-i-am-ana.github.io/GA-JWD-final-project/">
-        <div class="card">
+      <a href="https://hi-i-am-ana.github.io/GA-JWD-final-project/" target="_blank">
+        <div class="card change">
           <img src="./images/Task Planner.png" class="card-img-top" alt="looplab project">
           <div class="card-body">
-              <p class="card-text">Website created using Vanilla JavaScript </p>
+              <p class="card-text">Task Planner created using Vanilla JavaScript. An easy to use, visual task planner. This task planner lets you to quickly run through your daily to-dos and prioritise them so that you are focused only on the things that matter.
+              </p>
           </div>
         </div>
       </a>
@@ -128,8 +129,8 @@
   <div class="card mt-5" style="width: 18rem;">
 
     <ul class="list-group list-group-flush">
-      <li class="list-group-item"> <a href="https://github.com/mehthara">Github</a></li>
-      <li class="list-group-item"> <a href="https://www.linkedin.com/in/mehthara-mehaboob-83324452/">Linked in</a></li>
+      <li class="list-group-item"> <a href="https://github.com/mehthara" target="_blank">Github</a></li>
+      <li class="list-group-item"> <a href="https://www.linkedin.com/in/mehthara-mehaboob-83324452/" target="_blank">Linked in</a></li>
       <li class="list-group-item">Gmail: mehth.91@gmail.com</li>
     </ul>
   </div>
