--- a/index.html
+++ b/index.html
@@ -12,30 +12,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Poppins:ital,wght@0,400;0,700;1,500&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
-<!-- Navbar heading -->
-<!-- <nav class="navbar navbar-expand-lg">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Personal Potfolio</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#about">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Education</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Projects</a>
-        </li>
-      </ul>
-    
-    </div>
-  </div>
-</nav> -->
+
+
 <!-- main -->
   <main id="about">
     <div class="container">
@@ -138,16 +116,10 @@
 </div> 
 <!-- container close -->
 
-
-
-  
-
-
-
 </section>
-<!-- CONTACT -->
 
 
+<!-- footer -->
 <footer>
   <p>Copyright &#169; 2021 -  Mehthara Mehaboob</p>
 </footer>
