--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
   <div class="card mt-5" style="width: 18rem;">
 
     <ul class="list-group list-group-flush">
-      <li class="list-group-item"> <a href="https://github.com/mehthara" target="_blank">Github</a></li>
-      <li class="list-group-item"> <a href="https://www.linkedin.com/in/mehthara-mehaboob-83324452/" target="_blank">Linked in</a></li>
+      <a href="https://github.com/mehthara" target="_blank"></a><li class="list-group-item"> Github</li></a>
+      <a href="https://www.linkedin.com/in/mehthara-mehaboob-83324452/" target="_blank"></a><li class="list-group-item"> Linked in</li></a>
       <li class="list-group-item">Gmail: mehth.91@gmail.com</li>
     </ul>
   </div>
