add link to project

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       </a>
     </div>
     <div class="col-md-4">
-      <a href="https://hi-i-am-ana.github.io/GA-JWD-final-project/" target="_blank">
+      <a href="https://mehthara.github.io/GA-JWD-final-project/" target="_blank">
         <div class="card change">
           <img src="./images/Task Planner.png" class="card-img-top" alt="looplab project">
           <div class="card-body">
