add netflix-clone project in cards

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
       </a>
     </div>
     <div class="col-md-4">
-      <a href="https://mehthara.github.io/Hotel-Website/" target="_blank">
+      <a href="https://netflix-clone-893e2.web.app" target="_blank">
         <div class="card change">
-          <img src="./images/hotel.png" class="card-img-top" alt="looplab project">
+          <img src="./images/netflix-clone.png" class="card-img-top" alt="Netflix clone project">
           <div class="card-body ">
-              <p class="card-text">Hotel BT website created using pure CSS to showcase the amenities provided by the hotel. It also displays an About page and Contact page  </p>
+              <p class="card-text">A Netflix clone developed in React.js framework and deployed with Firebase</p>
           </div>
         </div>
       </a>
@@ -94,7 +94,7 @@
     <div class="col-md-4">
       <a href="https://mehthara.github.io/GA-JWD-final-project/" target="_blank">
         <div class="card change">
-          <img src="./images/Task Planner.png" class="card-img-top" alt="looplab project">
+          <img src="./images/Task Planner.png" class="card-img-top" alt="Task Planner project">
           <div class="card-body">
               <p class="card-text">Task Planner created using Vanilla JavaScript. An easy-to-use visual task planner. This task planner lets you to quickly run through your daily to-dos and prioritise them so that you are focused only on the things that matter.
               </p>
